# uvtest

./: .gitignore  README.md  prd.jsonc  progress.txt  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/uvtest/: __init__.py  cli.py  discovery.py  runner.py
tests/: __init__.py  test_cli.py  test_discovery.py  test_runner.py
