[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvtest"
version = "0.1.0"
description = "A CLI tool to run pytest tests across all packages in a UV monorepo"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
uvtest = "uvtest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/uvtest"]
