[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "uvtest"
dynamic = ["version"]
description = "A CLI tool to run pytest tests across all packages in a UV monorepo"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
uvtest = "uvtest.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/uvtest/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/uvtest"]
